addons/traefik20/traefik-route-file/kubernetes-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  tls:
    secretName: k8s-dashboard-vfinance-tls
  routes:
    - match: Host(`dashboard.vfnetwork.com`) 
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
