addons/traefik20/traefik-route-file/traefik-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.vfinance.cn`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
